# peace-score-prototype

./: .dockerignore  .gitignore  Dockerfile.frontend  Makefile  dev.db  docker-compose.yml  docker-entrypoint.sh  fly.toml  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: deploy.yml
__tests__/: api-client.test.ts  components.test.tsx  constants.test.ts  upload-validation.test.ts  useAnalysis.test.ts  usePolling.test.ts  utils.test.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/admin/: layout.tsx  page.tsx
app/analyze/: LiveAnalysis.tsx  UploadAnalysis.tsx  page.tsx
app/dashboard/: AnalysisCard.tsx  AnalysisRow.tsx  UploadCard.tsx  actions.ts  page.tsx
hooks/: useAnalysis.ts  useBatchUpload.ts  useLiveFeed.ts  usePolling.ts  useVideoUpload.ts
lib/: api-client.ts  auth-types.ts  auth.config.ts  auth.ts  constants.ts  db.ts  env.ts  s3.ts  types.ts  upload-store.ts  utils.ts
ml-backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
ml-backend/app/: config.py  main.py
ml-backend/app/api/: routes.py  schemas.py  websocket.py
ml-backend/app/ml/: frame_sampler.py  mock_models.py  model.py  pipeline.py  real_models.py  temporal.py
ml-backend/app/services/: instances.py  job_store.py  task_service.py  worker.py
ml-backend/peace_ml_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml-backend/tests/: conftest.py  test_api.py  test_job_store.py  test_pipeline.py
ml-backend/training/: config.json  dataset.py  train.py
prisma/: schema.prisma  seed-deploy.js  seed.ts
(+47 files in other folders)
